--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -83,10 +83,9 @@
         android:id="@+id/recyclerview_allPlayers"
         android:layout_width="0dp"
         android:layout_height="0dp"
-
-        android:layout_marginVertical="25dp"
+        tools:listitem="@layout/user_recyclerview_item"
+        android:layout_marginVertical="15dp"
         android:background="@drawable/input_transparent40"
-
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toStartOf="@+id/guideline8"
