--- a/app/src/main/res/layout/activity_wait_for_start.xml
+++ b/app/src/main/res/layout/activity_wait_for_start.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".screens.CreateRoomActivity">
+    tools:context=".screens.WaitForStartActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
@@ -20,13 +20,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.55" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.7" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
@@ -92,69 +85,32 @@
         app:layout_constraintTop_toTopOf="@+id/guideline1" />
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:fontFamily="@font/jura_bold"
-        android:text="Юзернейм"
-        android:textColor="@color/white"
-        android:textSize="26sp"
-
-        app:layout_constraintBottom_toTopOf="@+id/input_userName"
-        app:layout_constraintStart_toStartOf="@+id/guideline8"
-        app:layout_constraintTop_toTopOf="@+id/guideline2" />
-
-    <EditText
-        android:id="@+id/input_userName"
-        android:layout_width="0dp"
-        android:layout_height="66dp"
-
-        android:textColor="@color/white"
-        android:textSize="26sp"
-        android:padding="20dp"
-        android:fontFamily="@font/jura_bold"
-        android:background="@drawable/input_transparent40"
-        android:ems="10"
-        android:inputType="textPersonName"
-
-        app:layout_constraintBottom_toTopOf="@+id/guideline3"
-        app:layout_constraintEnd_toStartOf="@+id/guideline7"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="@+id/guideline8" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_startGame"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-
-        android:background="@drawable/button_green"
-        android:fontFamily="@font/jura_bold"
-        android:paddingHorizontal="30dp"
-        android:paddingVertical="18dp"
-        android:text="Начать игру"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
-        android:textSize="26sp"
-
-        app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintEnd_toStartOf="@+id/guideline7"
-        app:layout_constraintStart_toStartOf="@+id/guideline8"
-        app:layout_constraintTop_toTopOf="@+id/guideline3" />
-
-    <TextView
         android:id="@+id/text_gameRules"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
         android:fontFamily="@font/jura_bold"
         android:text="Правила игры"
+        android:layout_marginBottom="14dp"
         android:textColor="@color/white"
         android:textSize="26sp"
 
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
+        app:layout_constraintStart_toStartOf="@+id/guideline8" />
+
+    <TextView
+        android:id="@+id/textView_text_wait"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Игра начнется, когда создатель комнаты нажмет на кнопку"
+        android:textSize="26sp"
+        android:textColor="@color/teal_200"
+        android:fontFamily="@font/jura_bold"
+        android:gravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/text_gameRules"
+        app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toStartOf="@+id/guideline8"
-        app:layout_constraintTop_toBottomOf="@+id/button_startGame" />
+        app:layout_constraintTop_toTopOf="@+id/guideline2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
