--- a/app/src/main/res/layout/activity_game_rules.xml
+++ b/app/src/main/res/layout/activity_game_rules.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".GameRulesActivity">
+    tools:context=".screens.GameRulesActivity">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_goBack"
