--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,12 +7,22 @@
     android:background="@drawable/bg"
     tools:context=".screens.GameActivity">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline1" />
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_submitAnswer"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
-        android:visibility="invisible"
         android:background="@drawable/button_green"
         android:fontFamily="@font/jura_bold"
         android:paddingHorizontal="30dp"
@@ -31,7 +41,6 @@
         android:id="@+id/input_userAnswer"
         android:layout_width="0dp"
         android:layout_height="66dp"
-        android:visibility="invisible"
 
         android:background="@drawable/input_transparent40"
         android:ems="10"
@@ -52,13 +61,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:visibility="invisible"
         android:layout_marginTop="14dp"
         android:fontFamily="@font/jura_bold"
         android:text="Введите ответ"
         android:textColor="@color/white"
-
         android:textSize="26sp"
+
         app:layout_constraintStart_toStartOf="@+id/guideline8"
         app:layout_constraintTop_toTopOf="@+id/guideline1" />
 
@@ -101,7 +109,6 @@
         android:id="@+id/textView_questionNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
 
         android:layout_marginTop="24dp"
         android:text="1 вопрос"
@@ -118,7 +125,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
-        android:visibility="invisible"
         android:layout_marginTop="14dp"
         android:text="01:00"
         android:gravity="center"
@@ -138,7 +144,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
-        android:visibility="invisible"
         android:text="Сколько пальцев на ногах у кошки? "
         android:textSize="26sp"
         android:textColor="@color/white"
@@ -150,32 +155,22 @@
         app:layout_constraintTop_toBottomOf="@+id/timer" />
 
     <TextView
-        android:id="@+id/sound_textView"
+        android:id="@+id/wait_answer"
         android:layout_width="0dp"
+        android:layout_height="0dp"
         android:visibility="invisible"
-        android:layout_height="wrap_content"
-        android:text="Убедитесь, что вы в наушниках"
-        android:textSize="32sp"
+
         android:gravity="center"
-        android:textColor="@color/teal_200"
+        android:text="Ожидайте других игроков"
+        android:textSize="26sp"
+        android:textColor="@color/white"
         android:fontFamily="@font/jura_bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+
+        app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toStartOf="@+id/guideline7"
         app:layout_constraintStart_toStartOf="@+id/guideline8"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/guideline3" />
 
-    <TextView
-        android:id="@+id/digit_textView"
-        android:textColor="@color/teal_200"
-        android:visibility="invisible"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="3"
-        android:fontFamily="@font/jura_bold"
-        android:textSize="300sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
