--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -163,7 +163,7 @@
         android:gravity="center"
         android:text="Ожидайте других игроков"
         android:textSize="26sp"
-        android:textColor="@color/white"
+        android:textColor="@color/teal_200"
         android:fontFamily="@font/jura_bold"
 
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
