--- a/app/src/main/res/layout/activity_start_animation.xml
+++ b/app/src/main/res/layout/activity_start_animation.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg"
-    tools:context=".screens.GameAnimationActivity">
+    tools:context=".screens.StartAnimationActivity">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline7"
